[package]
name = "sss-test-report"
version = "0.1.0"
edition = "2021"

[dependencies]
testing = { git = "https://github.com/a-givertzman/rust-testing.git", version = "0.1.1" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", version = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", tag = "0.2.0" }

log = "^0.4"
env_logger = "^0.11"
thiserror = "1.0.57"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
calamine = "0.26.1"
chrono = "0.4.38"
charts-rs = "0.3.19"
splines = "4.3.1"
